# serde-numpy

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  pytest.ini  release.py
profile/: img_util.py  json_util.py  profile.py
src/: img.rs  lib.rs  parsing.rs
src/parsing/: array_types.rs  errors.rs  parse_np_array.rs  parse_np_float.rs  parse_np_int.rs  parse_py_list.rs  parse_utils.rs  python_types.rs  transpose_types.rs
tests/: fixtures.py  test.py  test_errors.py  test_successes.py  utils.py
tests/img/: fixtures.py  test_sucesses.py
tests/json/: fixtures.py
