[package]
name = "serde_numpy"
version = "0.1.0"
authors = ["Will Norcliffe Brown", "Radu Grosu"]
description = "A library for parsing selected keys from json directly into numpy arrays"
edition = "2018"

[lib]
name = "serde_numpy"
crate-type = ["cdylib"] 

[dependencies]
numpy = "0.15" # rust-numpy
serde_json = "1.0"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]
