[package]
name = "serde_numpy"
version = "0.3.0"
authors = ["Will Norcliffe Brown", "Radu Grosu"]
description = "A library for deserializing various formats directly into numpy arrays"
edition = "2021"

[lib]
name = "serde_numpy"
crate-type = ["cdylib"] 

[dependencies]
numpy = "^0.17" # rust-numpy
num-traits = "0.2"
ndarray = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rmp-serde = "^1.1"
itertools = "0.7.8"
pyo3 = { version = "^0.17.2", features = ["extension-module"] }
zune-jpeg = "^0.3"
zune-png = "^0.2"