[build-system]
build-backend = "maturin"
requires = ["poetry_core>=1.0.0"]

[tool.poetry]
name = "serde-numpy"
version = "0.1.0"
description = "A library for parsing selected keys from json directly into numpy arrays"
authors = ["Will Norcliffe Brown", "Radu Grosu"]

[tool.poetry.dependencies]
numpy = ">=1.18"
python = ">=3.6"
maturin = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
